--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ summary {
 </div>
 
 <div id="arquivos" class="section level2">
-<h2>Baixe esse arquivo em PDF, além dos demais arquivos que compões o projeto</h2>
+<h2>Arquivos que compõe o projeto, inclusive a presente página em PDF</h2>
 <p> <a href="README.md">Readme</a> </p>
 <p> <a href="DetecaoFraude-Solucao.pdf">Detecção de Fraude - Solução em PDF</a> </p>
 <p> <a href="DetecaoFraude-Solucao.Rmd">Arquivo .Rmd</a> </p>
